required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Subversion log comments.

Current Version (future 6.0.2, SVN branch-6-0):
---------------------------

- Fixed contains operator in logical expresions (#3974)

- Fix incorrect rendering of GD lines between 1 and 2 pixels wide (#3962)

Version 6.0.1 (2011-07-12):
---------------------------

IMPORTANT SECURITY FIXES:

-  Fixes to prevent SQL injections through OGC filter encoding (in WMS, WFS 
   and SOS), as well as a potential SQL injection in WMS time support. 
   Your system may be vulnerable if it has MapServer with OGC protocols 
   enabled, with layers connecting to an SQL RDBMS backend, either 
   natively or via OGR (#3903) 

Other fixes:

- Applied patch for ticket (symbol writing issues) (#3589)

- Fix performance issue with Oracle and scrollable cursors (#3905)

- Fix attribute binding for layer styles (#3941)

- Added missing fclose() when writing query files (#3943)

- Fix double-free in msAddImageSymbol() when filename is a http resource (#3939)

- Fix rendering of lines with outlinewidth set if not on first style (#3935)

- Added writing of cluster object when saving map. Also improved handling of
  cluster parsing errors (#3934)

- Fix for the cluster processing if the shape bounds doesn't overlap 
  with the given extent (#3913)

- OGC Filter: fix segfault when a ows_varname_type or wfs_varname_type is
  defined but not a gml_varname_type (#3902)

- Fix regression of MapServer 6.0.0 when specifying a time range in WMS time
  requests on a Postgis layer (#3909)

- Fixed order of metadata lookup for WMS GML GetFeatureInfo. 'ows' should 
  come last, not first (#3636).

- Fixed mssql2008 to return correct geometries with chart layer type (#3894)
